--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,13 +14,18 @@
     "jest:watch": "jest --watch",
     "prettier:check": "prettier --check \"**/*.{ts,tsx}\"",
     "prettier:write": "prettier --write \"**/*.{ts,tsx}\"",
-    "test": "tsc --noEmit && npm run prettier:write && npm run lint && npm run jest -- --passWithNoTests"
+    "test": "tsc --noEmit && npm run prettier:write && npm run lint && npm run jest -- --passWithNoTests",
+    "download-openapi": "curl http://127.0.0.1:8400/openapi.json -o openapi.json",
+    "modify-openapi": "node modify-openapi.js",
+    "generate-client-core": "openapi --input ./openapi.json --output ./src/client --client axios --useOptions --useUnionTypes",
+    "generate-client": "npm run download-openapi && npm run modify-openapi && npm run generate-client-core"
   },
   "dependencies": {
+    "@apidevtools/json-schema-ref-parser": "^11.5.4",
     "@emotion/react": "^11.11.1",
     "@emotion/server": "^11.11.0",
     "@hcaptcha/react-hcaptcha": "^1.10.1",
-    "@hello-pangea/dnd": "^16.5.0",
+    "@hello-pangea/dnd": "^16.6.0",
     "@mantine/core": "7.6.0",
     "@mantine/dates": "7.6.0",
     "@mantine/dropzone": "7.6.0",
@@ -30,6 +35,8 @@
     "@mantine/notifications": "7.6.0",
     "@mantine/spotlight": "7.6.0",
     "@next/bundle-analyzer": "^14.1.0",
+    "@openapitools/openapi-generator-cli": "^2.13.1",
+    "@propelauth/react": "^2.0.18",
     "@react-icons/all-files": "^4.1.0",
     "@tabler/icons-react": "^2.47.0",
     "axios": "^1.6.2",
@@ -40,6 +47,7 @@
     "i18next": "^23.10.0",
     "next": "^14.1.0",
     "next-i18next": "^15.1.1",
+    "openapi-typescript-codegen": "^0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ellipsis-text": "^1.2.1",
