--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -19,6 +19,7 @@ gunicorn = ">=20.1.0"
 heliclockter = ">=1.3.0"
 parameterized = ">=0.8.1"
 passlib = ">=1.7.4"
+propelauth-fastapi = ">=2.1.11"
 pydantic = "<3.0.0"
 pydantic_settings = "2.1.0"
 pyjwt = ">=2.6.0"
