--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3.10-alpine3.17
 ARG packages
+ARG ENVIRONMENT
+
 RUN apk --update add ${packages} \
     && rm -rf /var/cache/apk/* \
     && pip3 install --upgrade pip pipenv wheel virtualenv
@@ -13,11 +15,8 @@ RUN addgroup --system bracket && adduser --system bracket --ingroup bracket \
 USER bracket
 
 RUN set -ex \
-    && pip3 install --upgrade pip pipenv wheel virtualenv \
     && pipenv install --deploy
 
-CMD pipenv run gunicorn \
-    -k uvicorn.workers.UvicornWorker \
-    bracket.app:app \
-    --bind 0.0.0.0:8400 \
-    --workers 1
+ENV ENVIRONMENT=${ENVIRONMENT}
+
+CMD pipenv run uvicorn bracket.app:app --host=0.0.0.0 --port=8400
