--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -17,6 +17,7 @@ fastapi-cache2 = ">=0.2.0"
 fastapi-sso = ">=0.6.4"
 gunicorn = ">=20.1.0"
 heliclockter = ">=1.3.0"
+limits = ">=3.11.0"
 parameterized = ">=0.8.1"
 passlib = ">=1.7.4"
 propelauth-fastapi = ">=2.1.11"
@@ -25,6 +26,7 @@ pydantic_settings = "2.1.0"
 pyjwt = ">=2.6.0"
 python-dotenv = ">=0.21.0"
 python-multipart = ">=0.0.5"
+redis = ">=5.0.4"
 sentry-sdk = ">=1.13.0"
 sqlalchemy = "<2.0"
 sqlalchemy-stubs = ">=0.4"
