--- a/package.json
+++ b/package.json
@@ -1,8 +1,94 @@
 {
+  "name": "Bracket",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "analyze": "ANALYZE=true next build",
+    "start": "next start",
+    "typecheck": "tsc --noEmit",
+    "export": "next build && next export",
+    "lint": "next lint",
+    "jest": "jest",
+    "jest:watch": "jest --watch",
+    "prettier:check": "prettier --check \"**/*.{ts,tsx}\"",
+    "prettier:write": "prettier --write \"**/*.{ts,tsx}\"",
+    "test": "tsc --noEmit && npm run prettier:write && npm run lint && npm run jest -- --passWithNoTests",
+    "download-openapi": "curl http://127.0.0.1:8400/openapi.json -o openapi.json",
+    "modify-openapi": "node modify-openapi.js",
+    "generate-client-core": "openapi --input ./openapi.json --output ./src/client --client axios --useOptions --useUnionTypes",
+    "generate-client": "npm run download-openapi && npm run modify-openapi && npm run generate-client-core"
+  },
   "dependencies": {
-    "@propelauth/react": "^2.0.18"
+    "@apidevtools/json-schema-ref-parser": "^11.5.4",
+    "@emotion/react": "^11.11.1",
+    "@emotion/server": "^11.11.0",
+    "@hcaptcha/react-hcaptcha": "^1.10.1",
+    "@hello-pangea/dnd": "^16.6.0",
+    "@mantine/core": "7.6.0",
+    "@mantine/dates": "7.6.0",
+    "@mantine/dropzone": "7.6.0",
+    "@mantine/form": "7.6.0",
+    "@mantine/hooks": "7.6.0",
+    "@mantine/next": "^6.0.21",
+    "@mantine/notifications": "7.6.0",
+    "@mantine/spotlight": "7.6.0",
+    "@next/bundle-analyzer": "^14.1.0",
+    "@openapitools/openapi-generator-cli": "^2.13.1",
+    "@propelauth/react": "^2.0.18",
+    "@react-icons/all-files": "^4.1.0",
+    "@tabler/icons-react": "^2.47.0",
+    "axios": "^1.6.2",
+    "clsx": "^2.0.0",
+    "cookies-next": "^4.1.0",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.10",
+    "i18next": "^23.10.0",
+    "next": "^14.1.0",
+    "next-i18next": "^15.1.1",
+    "openapi-typescript-codegen": "^0.28.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-ellipsis-text": "^1.2.1",
+    "react-i18next": "^14.1.0",
+    "react-icons": "^5.0.1",
+    "react-qr-code": "^2.0.12",
+    "react-redux": "^9.0.2",
+    "swr": "^2.2.4",
+    "yarn-upgrade-all": "^0.7.2"
   },
   "devDependencies": {
-    "@types/node": "^20.11.30"
+    "@babel/core": "^7.24.0",
+    "@next/eslint-plugin-next": "^14.0.3",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^6.4.1",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.1",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.3",
+    "@types/react": "^18.2.42",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^7.3.1",
+    "babel-loader": "^9.1.3",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-mantine": "^3.1.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jest": "^27.9.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-testing-library": "^6.2.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.4.32",
+    "postcss-preset-mantine": "^1.13.0",
+    "postcss-simple-vars": "^7.0.1",
+    "prettier": "^3.1.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.4.2"
   }
 }
